# omniSPH

./: .gitignore  2DSPH_v2.sln  2DSPH_v2.vcxproj  2DSPH_v2.vcxproj.filters  CMakeLists.txt  LICENSE  Source.cpp  SourceTerminal.cpp  imgui.ini  test.cpp  test.h  test.yaml
cheb/: Domain.cpp  Domain.h  Function.cpp  Function.h  Interval.cpp  Interval.h  IntervalFunction.cpp  IntervalFunction.h  algorithms.cpp  algorithms.h  cheb.h  constants.h  utilities.cpp  utilities.h  vectorutil.cpp  vectorutil.h
gui/: OSD.cpp  glui.cpp  glui.h  initFunctions.cpp  interaction.cpp  rayWindow.cpp  rendering.cpp  timeWindow.cpp
imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  implot.cpp  implot.h
omnySPH/: CMakeLists.txt  setup.py
omnySPH/src/: main.cpp
omnySPH/src/omnySPH/: __init__.py
simulation/: 2DMath.h  SPH.cpp  SPH.h  SPHRender.h  Triangle.cpp  config.cpp  config.h  fluidMechanics.cpp  marchingSquares.cpp  rayRender.cpp  simulationRender.cpp  tinycolormap.h  tools.cpp  utility.cpp
tools/: ParameterManager.cpp  ParameterManager.h  color.cpp  color.h  exceptionHandling.cpp  exceptionHandling.h  timer.cpp  timer.h
